--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am looking to change my Carreer to a web developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Mexico City</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like go to the gym and drive motorcycles.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Be a web developer entrepreneur.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I am currently moving to Queretaro city.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a better Scrum Master</p>
     </section>
 
     <footer id="footer">
